# Pinn-Qushion

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
pinn_qushion/: __init__.py  inference.py
pinn_qushion/analysis/: __init__.py  autocorrelation.py  spectrum.py
pinn_qushion/models/: __init__.py  complex_mlp.py  pinn.py
pinn_qushion/potentials/: __init__.py  base.py  double_well.py  gaussian_well.py  harmonic.py  square_well.py
pinn_qushion/training/: __init__.py  loss.py  sampler.py  trainer.py
scripts/: evaluate_models.py  train_all.py
tests/: __init__.py  test_analysis.py  test_models.py  test_physics.py  test_potentials.py  test_training.py
